Fixed typo in Hadley Wickham's name.

--- a/Tidy-Data.ipynb
+++ b/Tidy-Data.ipynb
@@ -64,7 +64,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "A messy data set.  *Messy* is used as defined in Hadley Whickham's paper: any data set that is not tidy.  Messy data sets are often convenient for showing them to human as they are compact.  This form is often used in publications."
+    "A messy data set.  *Messy* is used as defined in Hadley Wickham's paper: any data set that is not tidy.  Messy data sets are often convenient for showing them to human as they are compact.  This form is often used in publications."
    ]
   },
   {
@@ -1372,7 +1372,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's use year 2000, and drop few columns, to stay in sync with Whickham's article."
+    "Let's use year 2000, and drop few columns, to stay in sync with Wickham's article."
    ]
   },
   {
